--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,7 @@
 FROM nginx:alpine
 
-USER root
-
-COPY index.html /usr/share/nginx/html
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY index.html /usr/share/nginx/html/index.html
 
 USER 1001
 
